...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminBrowseProfile">

    <SearchView
        android:id="@+id/profileSearcher"
        android:layout_width="340dp"
        android:layout_height="32dp"
        android:layout_marginTop="52dp"
        android:background="#CAC9C9"
        android:visibility="visible"
        android:focusable="true"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/profileListView"
        android:layout_width="match_parent"
        android:layout_height="580sp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
