...
            android:layout_height="wrap_content"
            android:text="Welcome, Administrator"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal" />

        <ListView
            android:id="@+id/adminOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            android:divider="@android:color/transparent"
            android:dividerHeight="30sp"
            android:layout_gravity="center_horizontal"/>
...
