...
        android:text="Profile Role"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />

    <Button
        android:id="@+id/btnViewProfile"
        android:layout_width="60dp"
        android:layout_height="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24sp"
        android:textSize="12sp"
...
