...
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserHomepage" />

    <Button
        android:id="@+id/btnDeleteUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="Delete User"
...
