<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/saveAttendeeImage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".attendee.AttendeeAccount">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="329dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edittext_frame"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendeeProfilePic" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="329dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edittext_frame"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/Contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contact"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="329dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edittext_frame"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <TextView
        android:id="@+id/HomepageDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HomepageDescription"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent" />


    <!--    android:onClick="onCustomizeProfileSaveClicked"-->

    <!-- Adjusted to use start constraint -->


    <!--        android:onClick="onCustomizeProfileDeleteImageClicked"-->


    <!--        android:onClick="onCustomizeProfileCustomizeImageClicked"-->



    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_enable_geolocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="Enable Geolocation"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <Button
        android:id="@+id/AttendeeAccountSave"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_background"
        android:text="@string/AttendeeSave"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CustomizeImage" />

    <Button
        android:id="@+id/DeleteImage"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_button_background"
        android:text="@string/DeleteImage"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <Button
        android:id="@+id/CustomizeImage"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/rounded_button_background"
        android:text="@string/CustomizeImage"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <ImageView
        android:id="@+id/attendeeProfilePic"
        android:layout_width="120dp"
        android:layout_height="86dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>
