<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/home"
        android:icon="@drawable/ic_home"
        android:id="@+id/attendeeHome" />
    <item android:title="@string/event"
        android:icon="@drawable/ic_calender"
        android:id="@+id/attendeeEventMenu"
        />
    <item android:title="@string/account"
        android:icon="@drawable/ic_person"
        android:id="@+id/attendeeAccount"/>
</menu>