<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".attendee.AttendeeAccount">

    <Button
        android:id="@+id/btnCustomizeProfile"
        android:layout_width="375dp"
        android:layout_height="200dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/rounded_button_background"
        android:drawableStart="@drawable/ic_person"
        android:onClick="onCustomizeProfileClicked"
        android:padding="30dp"
        android:text="@string/edit_profile"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/EventHistory"
        android:layout_width="375dp"
        android:layout_height="200dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/rounded_button_background"
        android:drawableStart="@drawable/ic_history"
        android:onClick="onEventHistoryClicked"
        android:padding="30dp"
        android:text="@string/history"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCustomizeProfile" />

</androidx.constraintlayout.widget.ConstraintLayout>
