...
    android:layout_height="match_parent"
    tools:context=".attendee.AttendeeEvent"
    android:clickable="true">


    <SearchView
        android:id="@+id/eventSearcher"
        android:layout_width="340dp"
        android:layout_height="32dp"
        android:layout_marginTop="102dp"
        android:background="#CAC9C9"
        android:focusable="true"
        android:focusableInTouchMode="true"
...
